    - Add a --python3 option to tests/run to run the tests under Python 3.
    - Handle renaming of __builtin__ to builtins in Python 3.
    - Only pass unicode=1 to gettext.install in Python 2.
    - Port ubiquity.auto_update to python-apt 0.8 progress classes.
    - Use Python 3 names for itertools.izip and itertools.izip_longest if
      available.
  * Add Burmese translations.
  * Remove obsolete uxlaunch handling, since it's no longer used and has
    been removed from the archive.
  * Avoid locking failures when clicking on the "update this installer" link
    more than once.

  [ Stéphane Graber ]
  * Spawn dconf-service from ubiquity-dm and drop all the dbus-launch calls.
    This should ensure we have a single dconf-service running and that gets
    killed on ubiquity's exit.
  * ubiquity-dm: Turn on the compositor in metacity. (LP: #987168)
  * wallpaper: Update code to properly set the wallpaper when compositing
    is enabled.

 -- Stéphane Graber <stgraber@ubuntu.com>  Mon, 30 Apr 2012 10:51:23 +0200

ubiquity (2.10.16) precise-proposed; urgency=low

  [ Steve Langasek ]
  * If we can't figure out the target user's uid/gid, don't copy the photo
    to the user's home directory.  Addresses the immediate symptom of bug
    #947738, if not the root cause.

  [ Colin Watson ]
  * Automatic update of included source packages: apt-setup 1:0.55ubuntu4,
    console-setup 1.70ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 20 Apr 2012 15:21:46 +0100

ubiquity (2.10.15) precise-proposed; urgency=low

  * Fix crash when attempting to update the installer and a language isn't
    selected for some reason (LP: #985368).
  * Automatic update of included source packages: partman-target 77ubuntu2.

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 19 Apr 2012 12:44:17 +0100

ubiquity (2.10.14) precise-proposed; urgency=low

  [ Colin Watson ]
  * Install ubiquity-frontend-$frontend along with oem-config-$frontend to