@@ -3,14 +3,14 @@ Section: admin
 Priority: optional
 Maintainer: Ubuntu Installer Team <ubuntu-installer@lists.ubuntu.com>
 Uploaders: Colin Watson <cjwatson@ubuntu.com>, Evan Dandrea <ev@ubuntu.com>
-Build-Depends: apt, bf-utf-source, dctrl-tools, debconf (>= 0.5.0), debconf-utils, debhelper (>= 9), dh-di (>= 3), dpkg-dev (>= 1.14.4), gir1.2-soup-2.4, gir1.2-timezonemap-1.0, gir1.2-xkl-1.0, gnome-icon-theme, gobject-introspection, intltool (>= 0.40.0), intltool-debian (>= 0.30+20040212), iso-codes, isoquery, keymapper (>= 0.5.3-7), libbogl-dev, libcairo2-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.76), libgirepository1.0-dev, libglib2.0-dev, libgstreamer-plugins-base0.10-dev (>= 0.10.23), libgtk-3-dev, libgudev-1.0-dev, libindicator3-dev, libiw-dev (>= 27+28pre9), liblocale-gettext-perl, libparted-dev, libparted0-dev (>= 2.2), libxml2-dev (>= 2.6.24), locales, pkg-config, po-debconf (>= 1.0), pyflakes, python-all (>= 2.6.6-3~), python-apt (>= 0.7.100.3~), python-cairo, python-dbus, python-gi-cairo, python-gi-dev, python-libxml2, python-mock (>= 0.7.0), python-pyicu (>= 1.0), python-scour, tzdata, ubuntu-artwork, udev, wget, xkb-data (>= 0.9), xkb-data-i18n, xvfb
+Build-Depends: apt, bf-utf-source, dctrl-tools, debconf (>= 0.5.0), debconf-utils, debhelper (>= 9), dh-di (>= 3), dpkg-dev (>= 1.14.4), gir1.2-soup-2.4, gir1.2-timezonemap-1.0, gir1.2-xkl-1.0, gnome-icon-theme, gobject-introspection, intltool (>= 0.40.0), intltool-debian (>= 0.30+20040212), iso-codes, isoquery, keymapper (>= 0.5.3-7), libbogl-dev, libcairo2-dev, libdebconfclient0-dev (>= 0.68), libdebian-installer4-dev (>= 0.76), libgirepository1.0-dev, libglib2.0-dev, libgstreamer-plugins-base0.10-dev (>= 0.10.23), libgtk-3-dev, libgudev-1.0-dev, libindicator3-dev, libiw-dev (>= 27+28pre9), liblocale-gettext-perl, libparted-dev, libparted0-dev (>= 2.2), libxml2-dev (>= 2.6.24), locales, pkg-config, po-debconf (>= 1.0), pyflakes, python-all (>= 2.6.6-3~), python-apt (>= 0.7.100.3~), python-cairo, python-dbus, python-gi-cairo, python-gi-dev, python-libxml2, python-mock (>= 0.7.0), python-pyicu (>= 1.0), python-scour, python-six, tzdata, ubuntu-artwork, udev, wget, xkb-data (>= 0.9), xkb-data-i18n, xvfb
 Standards-Version: 3.6.2.1
 X-Python-Version: >= 2.7
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-installer/ubiquity/trunk
 
 Package: ubiquity
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, debconf (>= 1.4.72ubuntu5), ubiquity-frontend-${mangled-version}, ubiquity-artwork-${mangled-version}, laptop-detect, lsb-release, ubiquity-casper, python-apt (>= 0.7.100.3~), ${console-setup-depends}, iso-codes, passwd, adduser, os-prober, rdate, ntfs-3g (>= 1:2011.1.15AR.4+2011.4.12-1) [any-alpha any-amd64 any-i386] | ntfsprogs [any-alpha any-amd64 any-i386], ecryptfs-utils, cryptsetup, python-pyicu (>= 1.0), reiserfsprogs, language-selector-common (>= 0.4.16), archdetect-deb, dpkg-repack, apt-clone, wget, grub-common [any-amd64 any-i386], realpath, dbus-x11
+Depends: ${shlibs:Depends}, ${misc:Depends}, ${python:Depends}, debconf (>= 1.4.72ubuntu5), ubiquity-frontend-${mangled-version}, ubiquity-artwork-${mangled-version}, laptop-detect, lsb-release, ubiquity-casper, python-apt (>= 0.7.100.3~), ${console-setup-depends}, iso-codes, passwd, adduser, os-prober, rdate, ntfs-3g (>= 1:2011.1.15AR.4+2011.4.12-1) [any-alpha any-amd64 any-i386] | ntfsprogs [any-alpha any-amd64 any-i386], ecryptfs-utils, cryptsetup, python-pyicu (>= 1.0), reiserfsprogs, language-selector-common (>= 0.4.16), archdetect-deb, dpkg-repack, apt-clone, wget, grub-common [any-amd64 any-i386], realpath, dbus-x11, python-six
 Recommends: grub-pc [any-amd64 any-i386] | grub [any-amd64 any-i386] | grub-efi [any-amd64 any-i386], flash-kernel [armel armhf], uboot-mkimage [armel armhf], uboot-envtools [armel armhf], redboot-tools [armel armhf], yaboot [powerpc], hfsutils [powerpc], dmraid, btrfs-tools
 Conflicts: ubuntu-express, espresso, espresso-utils, espresso-locale, espresso-keyboard-setup, espresso-kbd-chooser, espresso-timezone, user-setup (<< 0.05ubuntu6), partman, espresso-grub, espresso-yaboot
 Replaces: ubuntu-express, espresso, espresso-utils, espresso-locale, espresso-keyboard-setup, espresso-kbd-chooser, espresso-timezone, user-setup (<< 0.05ubuntu6), partman, espresso-grub, espresso-yaboot, ubiquity-frontend-gtk (<< 2.3.8)
